--- a/AASUI/home/templates/home/main.html
+++ b/AASUI/home/templates/home/main.html
@@ -71,7 +71,7 @@
 	</div>
 </div>
 <center>
-<strong>Powered by <a href="http://haios.org" target="_blank">HAIOS.org</a></strong>
+<strong>Powered by <a href="http://haios.org" target="_blank"> HAIOS </a></strong>
 </center>
 <br>
 <br>
