--- a/AASUI/home/templates/home/home.html
+++ b/AASUI/home/templates/home/home.html
@@ -23,11 +23,14 @@ function startCapturing(){
      url: "startcapturing",
      type: "POST",
      data: fd,
-     success:function(data){},
+     success:function(data){
+
+       window.open('/webcamtest/')
+     },
      error: function (xhr, ajaxOptions, thrownError) {
         alert(xhr.status);
         alert(thrownError);
-        alert(ajaxOptions)
+        alert(ajaxOptions);
       },
      processData: false,  // tell jQuery not to process the data
      contentType: false   // tell jQuery not to set contentType
