--- a/AASUI/home/templates/home/login.html
+++ b/AASUI/home/templates/home/login.html
@@ -2,7 +2,7 @@
 {% extends 'home/base.html' %}
 
    {% block title %}
-     localOlx
+     digitalEye
    {% endblock %}
 
    {% block head %}
@@ -15,13 +15,13 @@
 {% block body %}
 
 
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<!--<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">-->
 
     <div id="login-overlay" class="modal-dialog">
       <div class="modal-content">
           <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-              <h4 class="modal-title" id="myModalLabel">Login to localOlx.com</h4>
+              <h4 class="modal-title" id="myModalLabel">Login to digitalEye</h4>
               <p class="text text-warning">{{error}}</p>
           </div>
           <div class="modal-body">
@@ -55,11 +55,11 @@
                   <div class="col-xs-6">
                       <p class="lead">Register now for <span class="text-success">FREE</span></p>
                       <ul class="list-unstyled" style="line-height: 2">
-                          <li><span class="fa fa-check text-success"></span> See all your orders</li>
-                          <li><span class="fa fa-check text-success"></span> Fast re-order</li>
-                          <li><span class="fa fa-check text-success"></span> Save your favorites</li>
-                          <li><span class="fa fa-check text-success"></span> Fast checkout</li>
-                          <li><span class="fa fa-check text-success"></span> Get a gift <small>(only new customers)</small></li>
+                          <li><span class="fa fa-check text-success"></span> Easy To use</li>
+                          <li><span class="fa fa-check text-success"></span> Have Admin Part</li>
+                          <li><span class="fa fa-check text-success"></span> Save your time</li>
+                          <li><span class="fa fa-check text-success"></span> Fast </li>
+                          <li><span class="fa fa-check text-success"></span> Get Attendance List <small>(Student/class/All)</small></li>
                           <li><a href="/read-more/"><u>Read more</u></a></li>
                       </ul>
                       <p><a href="/signupform" class="btn btn-info btn-block">Yes please, register now!</a></p>
