--- a/AASUI/home/templates/home/testwebcam.html
+++ b/AASUI/home/templates/home/testwebcam.html
@@ -15,7 +15,7 @@
 
 
 	<div id="my_camera"></div>
-
+  <div id="identified"></div>
 	<!-- First, include the Webcam.js JavaScript Library -->
 	{% load staticfiles %}
 	<script type="text/javascript" src='{% static "home/js/webcam.js" %}'></script>
@@ -60,7 +60,7 @@
 				document.getElementById('results').innerHTML = '<h2>sending Image to server:</h2>' +
 					'<img src="'+data_uri+'"/>';
            Webcam.upload( data_uri, "/webcamimage/",function(code, text) {
-
+                document.getElementById('identified').innerHTML=text
               if(hk){
 								 t=setTimeout(take_snapshot,1000);
 							}
