--- a/AASUI/home/templates/home/help.html
+++ b/AASUI/home/templates/home/help.html
@@ -2,10 +2,55 @@
 
 
 {% block content %}
+<div class="row">
+    <div class="jumbotron">
+          <h1>HELP DESK</h1>
+    </div>
+    <div class="col-sm-12">
 
+    <h3><b>Admin Privileges</b></h3>
+    <ol>
+      <li >Admin can add new teacher into the database</li>
+      <li >Admin can remove existing teacher from the database.</li>
+      <li >Admin can add new student(including roll number,branch,course,batch,images) into the database.</li>
+      <li >Admin can remove existing student from the database.</li>
+      <li >Admin can also modify the attendance manually.</li>
+      <li >Admin can view logs or error,if any.It is helpful in determining the activities that were left undone in case of system crash.</li>
+    </ol>
 
-  <div class="row">
+   </br></br>
+   <h3><b>Teacher Privileges</b></h3>
 
-  </div>
+   <ol>
+      <li>Teacher can view previous as well as current attendance.</li>
+      <li>Teacher can take attendance.</li>
+   </ol>
+</br></br>
+<h3><b>Pre-processing of project</b></h3>
+<ol>
+<li>Admin will login into the system.</li>
+<li>He/She will register teachers and students into the system.</li>
+<li>Admin will add image data of different students into the database.</li>
+</ol>
+</br></br>
+
+<h3><b>How to use</b></h3>
+<ol>
+<li>The teacher logs into the system using his/her credentials.</li>
+<li>He/she will take the attendance on the click of start button(in which he/she selects the branch,batch,course).</li>
+<li>Now camera will start and there will be three options-
+<ul>
+  <li>Teacher can start taking snapshots</li>
+  <li>Teacher can stop taking snapshots</li>
+  <li>On the click of a "DONE" button,teacher can stop the attendance process and submit the result into the database.</li>
+</ul>
+</li>
+<li>Teacher can view history of previous attendances.</li>
+</ol>
+</br></br>
+
+</p>
+</div>
+</div>
 
 {% endblock %}
