--- a/AASUI/home/templates/home/main.html
+++ b/AASUI/home/templates/home/main.html
@@ -70,10 +70,12 @@
 		</div>
 	</div>
 </div>
-<center>
-<strong>Powered by <a href="http://haios.org" target="_blank"> HAIOS </a></strong>
-</center>
-<br>
-<br>
 
+<div id="footer">
+  <div class="container text-center">
+    <p class="text-muted credit" style="color:#000">
+     Powered by &copy; <a href="http://haios.org" target="_blank"> HAIOS.org </a>
+    </p>
+  </div>
+</div>
 {% endblock %}
