--- a/AASUI/home/templates/home/classForm.html
+++ b/AASUI/home/templates/home/classForm.html
@@ -12,7 +12,7 @@
                     <span class="help-block"></span>
                 </div>
                 <div class="form-group">
-                    <label for="branch" class="control-label">Brach</label>
+                    <label for="branch" class="control-label">Branch</label>
                     <select name="branch" class="form-control">
                        <option value="CSE">CSE</option>
                        <option value="ECE">ECE</option>
@@ -29,11 +29,6 @@
                           <option value="{{x}}">{{x}}</option>
                        {% endfor %}
                     </select>
-                    <span class="help-block"></span>
-                </div>
-                <div class="form-group">
-                    <label for="camip" class="control-label">Webcam IP</label>
-                    <input type="text" class="form-control" id="camip" name="camip" value="" required="" placeholder="10.42.0.1">
                     <span class="help-block"></span>
                 </div>
             </form>
