--- a/AASUI/home/templates/home/main.html
+++ b/AASUI/home/templates/home/main.html
@@ -48,7 +48,7 @@
 						</li>
 						<li>
 							<a href="/history">
-							<i class="glyphicon glyphicon-user"></i>
+							<i class="glyphicon glyphicon-list-alt"></i>
 							history </a>
 						</li>
 
