--- a/AASUI/home/templates/home/dataenterusingipwebcam.html
+++ b/AASUI/home/templates/home/dataenterusingipwebcam.html
@@ -4,14 +4,9 @@
 {% block content %}
 <div class="row">
     <div class="col-md-3">
-      <p class="text-primary">Branch : {{bcb.0}}</p>
+      <p class="text-primary">Roll Number : {{rollNumber}}</p>
     </div>
-    <div class="col-md-3">
-      <p class="text-primary">Course : {{bcb.1}}</p>
-    </div>
-    <div class="col-md-3">
-      <p class="text-primary">Batch : {{bcb.2}}</p>
-    </div>
+    
     <div class="col-md-3">
        <a class="btn btn-primary" href="/help/" role="button">Change</a>
     </div>
@@ -62,12 +57,7 @@
 <script type="text/javascript" src='{% static "home/js/webcam.js" %}'></script>
 
 <script>
-$("#done").click(function(){
 
-  $.get( "/done/", function( data ) {alert(data);});
-
-      });
-      
 var hk=true;
 function stop_snapshot() {
  hk=false;
@@ -81,7 +71,7 @@ function start_snapshot() {
 
  function take_snapshot() {
       /* rough cod */
-      $.post( "/ipcamimage/", function( data ){if(hk)setTimeout(take_snapshot,1000);});
+      $.post( "/ipcamdataenterimage/", function( data ){if(hk)setTimeout(take_snapshot,1000);});
     }
 
 setTimeout(take_snapshot,1000);
