--- a/AASUI/home/templates/home/dataenterusingwebcam.html
+++ b/AASUI/home/templates/home/dataenterusingwebcam.html
@@ -1,4 +1,4 @@
-{% extends 'home/main.html' %}
+{% extends 'home/admin.html' %}
 
 
 {% block content %}
@@ -15,7 +15,7 @@
 			 <div class="col-md-3">
 				 <p class="text-primary">Roll Number : {{rollNumber}}</p>
 			 </div>
-			 
+
 			 <div class="col-md-3">
 				  <a class="btn btn-primary" href="/help/" role="button">Change</a>
 			 </div>
