--- a/AASUI/home/templates/home/domore.html
+++ b/AASUI/home/templates/home/domore.html
@@ -1,4 +1,4 @@
-{% extends 'home/main.html' %}
+{% extends 'home/admin.html' %}
 
 
 {% block content %}
@@ -55,7 +55,7 @@
 
     });
 
-       
+
    </script>
 
 {% endblock %}
