--- a/AASUI/home/templates/registration/login.html
+++ b/AASUI/home/templates/registration/login.html
@@ -28,28 +28,19 @@
               <div class="row">
                   <div class="col-xs-6">
                       <div class="well">
-                          <form id="loginForm" method="POST" action="/login/" novalidate="novalidate">
+                        <form action="/admin/login/" method="post" accept-charset="utf-8">
                             {% csrf_token %}
-                              <div class="form-group">
-                                  <label for="emailId" class="control-label">User Name</label>
-                                  <input type="text" class="form-control" id="emailId" name="emailId" value="" required="" title="Please enter you username" placeholder="example@gmail.com">
-                                  <span class="help-block"></span>
-                              </div>
-                              <div class="form-group">
-                                  <label for="password" class="control-label">Password</label>
-                                  <input type="password" class="form-control" id="password" name="password" value="" required="" title="Please enter your password">
-                                  <span class="help-block"></span>
-                              </div>
-                              <div id="loginErrorMsg" class="alert alert-error hide">Wrong username og password</div>
-                              <div class="checkbox">
-                                  <label>
-                                      <input type="checkbox" name="remember" id="remember"> Remember login
-                                  </label>
-                                  <p class="help-block">(if this is a private computer)</p>
-                              </div>
-                              <button type="submit" class="btn btn-success btn-block">Login</button>
-                              <a href="/forgot/" class="btn btn-default btn-block">Help to login</a>
-                          </form>
+                            {% for field in form %}
+                            <label>{{ field.label }}</label>
+                            {% if field.errors %}
+                           {{ field.errors }}
+                           {% endif %}
+                           {{ field }}
+                           {% endfor %}
+                           <input type="hidden" name="next" value="/admin/" />
+                           <input class="btn btn-primary" type="submit" value="Submit"/>
+                        </form>
+
                       </div>
                   </div>
                   <div class="col-xs-6">
@@ -63,7 +54,6 @@
                           <li><a href="/read-more/"><u>Read more</u></a></li>
                       </ul>
                       <p><a href="/signupform" class="btn btn-info btn-block">Yes please, register now!</a></p>
-                      <p><a href="/admin" class="btn btn-info btn-block">Admin</a></p>
                   </div>
               </div>
           </div>
