--- a/AASUI/home/templates/home/domore.html
+++ b/AASUI/home/templates/home/domore.html
@@ -6,7 +6,8 @@
 
 <div class="container">
   <div class="row">
-   <h1>{{name}}</h1>
+   <h1>Upload multiple images of student face</h1>
+   <p>image lable like rollNumber.anyrandomeuniqNumber eg# 12103024.13132 </p>
    <div class="row">
       <form id="hkform">
           {% csrf_token %}
