--- a/AASUI/home/templates/home/main.html
+++ b/AASUI/home/templates/home/main.html
@@ -51,7 +51,11 @@
 							<i class="glyphicon glyphicon-list-alt"></i>
 							history </a>
 						</li>
-
+            <li>
+              <a href="/download">
+              <i class="glyphicon glyphicon-download"></i>
+              download </a>
+            </li>
             <li>
 							<a href="/admin">
 							<i class="glyphicon glyphicon-briefcase"></i>
