attendace add to databace

--- a/AASUI/home/templates/home/admin.html
+++ b/AASUI/home/templates/home/admin.html
@@ -40,7 +40,7 @@
 				<!-- SIDEBAR MENU -->
 				<div class="profile-usermenu">
 					<ul class="nav">
-						<li class="active">
+						<li class="">
 							<a href="/admin/domore">
 							<i class="glyphicon glyphicon-home"></i>
 							 Upload Multiple Images</a>
@@ -74,6 +74,24 @@
 		<div class="col-md-9">
             <div class="profile-content">
 			        {% block content %}
+              <div class="bs-calltoaction bs-calltoaction-success">
+                 <div class="row">
+                    <h1> Welcome to admin part</h1>
+                  </div>
+               </div>
+               <div class="bs-calltoaction bs-calltoaction-info">
+                  <div class="row">
+                    <ol>
+                    <li>Upload Multiple Image</li>
+                    <li>Capture Image Using Webcam & Ipcam and Upload</li>
+                    <li>Add Student and Teacher in Data base admin </li>
+                  </ol>
+                   </div>
+                </div>
+
+
+
+
               {% endblock %}
             </div>
 		</div>
