--- a/AASUI/home/templates/home/login.html
+++ b/AASUI/home/templates/home/login.html
@@ -48,7 +48,7 @@
                                   <p class="help-block">(if this is a private computer)</p>
                               </div>
                               <button type="submit" class="btn btn-success btn-block">Login</button>
-                              <a href="/forgot/" class="btn btn-default btn-block">Help to login</a>
+                              <a href="#" class="btn btn-default btn-block">Help to login</a>
                           </form>
                       </div>
                   </div>
@@ -60,9 +60,8 @@
                           <li><span class="fa fa-check text-success"></span> Save your time</li>
                           <li><span class="fa fa-check text-success"></span> Fast </li>
                           <li><span class="fa fa-check text-success"></span> Get Attendance List <small>(Student/class/All)</small></li>
-                          <li><a href="/read-more/"><u>Read more</u></a></li>
                       </ul>
-                      <p><a href="/signupform" class="btn btn-info btn-block">Yes please, register now!</a></p>
+                      <p><a href="#" class="btn btn-info btn-block">To get register contact to Admin</a></p>
                       <p><a href="/admin" class="btn btn-info btn-block">Admin</a></p>
                   </div>
               </div>
