--- a/AASUI/home/templates/home/dataenterusingipwebcam.html
+++ b/AASUI/home/templates/home/dataenterusingipwebcam.html
@@ -57,6 +57,9 @@
 <script type="text/javascript" src='{% static "home/js/webcam.js" %}'></script>
 
 <script>
+$("#done").click(function(){
+    window.open("/admin/",'_self')
+});
 
 var hk=true;
 function stop_snapshot() {
